--- a/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/buyer/buyerEditDialogClass.form
+++ b/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/buyer/buyerEditDialogClass.form
@@ -37,8 +37,8 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLayeredPane1" min="-2" pref="250" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+              <Component id="jLayeredPane1" min="-2" pref="298" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -74,7 +74,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout$JLayeredPaneConstraintsDescription">
-              <JLayeredPaneConstraints x="0" y="0" width="510" height="230" layer="0" position="-1"/>
+              <JLayeredPaneConstraints x="0" y="0" width="510" height="300" layer="0" position="-1"/>
             </Constraint>
           </Constraints>
 
@@ -93,22 +93,25 @@
                           <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="ID" min="-2" pref="50" max="-2" attributes="0"/>
-                          <Component id="Nama" max="32767" attributes="0"/>
-                          <Component id="jTextField3" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jTextField2" alignment="0" pref="241" max="32767" attributes="0"/>
-                          <Component id="jTextField1" alignment="0" pref="241" max="32767" attributes="0"/>
-                          <Component id="jTextField4" max="32767" attributes="0"/>
-                          <Component id="jTextField5" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="ID" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
+                                  <Component id="jTextField2" min="-2" pref="241" max="-2" attributes="0"/>
+                                  <Component id="Nama" min="-2" pref="241" max="-2" attributes="0"/>
+                                  <Component id="jTextField3" alignment="0" min="-2" pref="241" max="-2" attributes="0"/>
+                                  <Component id="jTextField1" alignment="0" min="-2" pref="241" max="-2" attributes="0"/>
+                                  <Component id="jTextField4" alignment="0" min="-2" pref="241" max="-2" attributes="0"/>
+                                  <Component id="jTextField5" alignment="0" min="-2" pref="241" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="buyerkontakidLbl" min="-2" pref="50" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jButton1" min="-2" pref="24" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="jTextField6" min="-2" pref="241" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="179" max="-2" attributes="0"/>
+                      <EmptySpace pref="144" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -116,11 +119,11 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="2" pref="2" max="2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="ID" min="-2" pref="20" max="-2" attributes="0"/>
-                          <Component id="lblID" min="-2" pref="10" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="lblID" alignment="3" min="-2" pref="10" max="-2" attributes="0"/>
+                          <Component id="ID" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lblNama" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="Nama" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -153,10 +156,9 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="buyerkontakidLbl" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
-                          <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jTextField6" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="43" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -187,7 +189,7 @@
             </Component>
             <Component class="javax.swing.JLabel" name="lblNama">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Nama:"/>
+                <Property name="text" type="java.lang.String" value="Name :"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="Nama">
@@ -197,7 +199,7 @@
             </Component>
             <Component class="javax.swing.JLabel" name="lblTelp">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Alamat :"/>
+                <Property name="text" type="java.lang.String" value="Address :"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField2">
@@ -207,13 +209,16 @@
             </Component>
             <Component class="javax.swing.JLabel" name="lblHp">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Telp. :"/>
+                <Property name="text" type="java.lang.String" value="Phone :"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField3">
               <Properties>
                 <Property name="name" type="java.lang.String" value="telp" noResource="true"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField3ActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
@@ -229,6 +234,9 @@
               <Properties>
                 <Property name="name" type="java.lang.String" value="npwp" noResource="true"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField4ActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
@@ -247,29 +255,12 @@
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel4">
               <Properties>
-                <Property name="text" type="java.lang.String" value="buyerkontakid"/>
+                <Property name="text" type="java.lang.String" value="Contact Person :"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JButton" name="jButton1">
+            <Component class="javax.swing.JTextField" name="jTextField6">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jButton1"/>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
-              </Events>
-            </Component>
-            <Component class="javax.swing.JLabel" name="buyerkontakidLbl">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Arial" size="10" style="0"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="0"/>
-                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-                  <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
-                    <EtchetBorder/>
-                  </Border>
-                </Property>
-                <Property name="name" type="java.lang.String" value="buyerkontakid" noResource="true"/>
+                <Property name="name" type="java.lang.String" value="contact person" noResource="true"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -311,7 +302,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Arial" size="10" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Apply" noResource="true"/>
+            <Property name="text" type="java.lang.String" value="Reset" noResource="true"/>
             <Property name="name" type="java.lang.String" value="applyButton" noResource="true"/>
           </Properties>
           <Events>
