--- a/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/matauang/matauangEditDialogClass.form
+++ b/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/matauang/matauangEditDialogClass.form
@@ -37,7 +37,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLayeredPane1" min="-2" pref="109" max="-2" attributes="0"/>
+              <Component id="jLayeredPane1" min="-2" pref="151" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -74,7 +74,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout$JLayeredPaneConstraintsDescription">
-              <JLayeredPaneConstraints x="0" y="0" width="510" height="100" layer="0" position="-1"/>
+              <JLayeredPaneConstraints x="0" y="0" width="510" height="130" layer="0" position="-1"/>
             </Constraint>
           </Constraints>
 
@@ -82,19 +82,28 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="4" pref="4" max="-2" attributes="0"/>
-                              <Component id="lblID" min="-2" pref="50" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Component id="lblNama1" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="Nama1" min="-2" pref="203" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="lblNama" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <EmptySpace min="4" pref="4" max="-2" attributes="0"/>
+                                      <Component id="lblID" min="-2" pref="50" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Component id="lblNama" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="ID" min="-2" pref="50" max="-2" attributes="0"/>
+                                  <Component id="Nama" min="-2" pref="203" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="ID" min="-2" pref="50" max="-2" attributes="0"/>
-                          <Component id="Nama" min="-2" pref="203" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace pref="235" max="32767" attributes="0"/>
+                      <EmptySpace pref="228" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -111,7 +120,12 @@
                           <Component id="lblNama" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="Nama" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="26" max="32767" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="lblNama1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="Nama1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="17" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -141,12 +155,22 @@
             </Component>
             <Component class="javax.swing.JLabel" name="lblNama">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Kode:"/>
+                <Property name="text" type="java.lang.String" value="Currency :"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="Nama">
               <Properties>
                 <Property name="name" type="java.lang.String" value="kode" noResource="true"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="lblNama1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Country :"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="Nama1">
+              <Properties>
+                <Property name="name" type="java.lang.String" value="negara" noResource="true"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -188,7 +212,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Arial" size="10" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Apply" noResource="true"/>
+            <Property name="text" type="java.lang.String" value="Reset" noResource="true"/>
             <Property name="name" type="java.lang.String" value="applyButton" noResource="true"/>
           </Properties>
           <Events>
