--- a/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/samplerecorditem/samplerecorditemEditDialogClass.form
+++ b/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/samplerecorditem/samplerecorditemEditDialogClass.form
@@ -35,9 +35,10 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
-              <Component id="jLayeredPane1" min="-2" pref="221" max="-2" attributes="0"/>
+              <Component id="jLayeredPane1" min="-2" pref="281" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -73,7 +74,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout$JLayeredPaneConstraintsDescription">
-              <JLayeredPaneConstraints x="0" y="0" width="510" height="210" layer="0" position="-1"/>
+              <JLayeredPaneConstraints x="0" y="0" width="510" height="240" layer="0" position="-1"/>
             </Constraint>
           </Constraints>
 
@@ -176,7 +177,7 @@
                           <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                           <Component id="qtyneedLabel" min="-2" pref="20" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="21" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -259,7 +260,7 @@
                   <Font name="Arial" size="10" style="0"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="2"/>
-                <Property name="text" type="java.lang.String" value="SampleRecordID:"/>
+                <Property name="text" type="java.lang.String" value="NO SampleRecord"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel2">
